Fix cut off when shrunk vertically

--- a/src/sass/_presets.scss
+++ b/src/sass/_presets.scss
@@ -13,3 +13,13 @@ $transparent-4: #00000066;
 $border-radius-default: 6px;
 
 $mobile: 460px;
+
+// animations
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
