--- a/src/sass/loading.scss
+++ b/src/sass/loading.scss
@@ -1,7 +1,7 @@
 @import '_presets.scss';
 
 .image-placeholder {
-  width: 277px;
+  width: 281px;
   height: 100%;
   border-radius: 1em;
   background: linear-gradient(315deg, transparent, $transparent-2);
