--- a/src/sass/steps.scss
+++ b/src/sass/steps.scss
@@ -1,88 +1,13 @@
 @import './_presets.scss';
 
 .steps {
-  height: 100%;
+  height: 38em;
+  max-width: 38em;
+  margin: auto;
+  margin-top: 4em;
 
-  .step {
-    display: flex;
+  @media screen and (max-width: $mobile) {
     height: 100%;
-
-    .image-container {
-      height: 600px;
-      flex-shrink: 1;
-
-      .image {
-        border-radius: 20px;
-        max-height: 100%;
-        width: auto;
-        height: 100%;
-        display: none;
-
-        -webkit-box-shadow: 0px 0px 52px -9px rgba(194, 194, 194, 0.8);
-        -moz-box-shadow: 0px 0px 52px -9px rgba(194, 194, 194, 0.8);
-        box-shadow: 0px 0px 52px -9px rgba(194, 194, 194, 0.8);
-
-        &.loaded {
-          display: block;
-          animation: fade-in 0.5s;
-        }
-      }
-    }
-
-    .text {
-      flex-grow: 1;
-      box-sizing: border-box;
-      padding: 1em 1.75em 1em;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-
-      .steps-title {
-        flex-shrink: 1;
-        color: $transparent-3;
-        font-weight: 500;
-        font-size: 0.9em;
-      }
-
-      .title {
-        flex-shrink: 1;
-      }
-
-      .description-wrapper {
-        flex-grow: 1;
-        position: relative;
-
-        .description {
-          position: absolute;
-          top: 50%;
-          transform: translateY(-50%);
-
-          line-height: 25px;
-        }
-      }
-
-      .buttons {
-        flex-shrink: 1;
-
-        .button {
-          &:first-child {
-            float: left;
-          }
-
-          &:last-child {
-            float: right;
-          }
-        }
-      }
-    }
-  }
-}
-
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
+    margin-top: 0;
   }
 }
